@@ -1,5 +1,10 @@
 2017-09-21  Andrew Burgess  <andrew.burgess@embecosm.com>
 
+	* server/main.cpp (createCpu): New function.
+	(main): Move creation of cpu object into new function.
+
+2017-09-21  Andrew Burgess  <andrew.burgess@embecosm.com>
+
 	* server/main.cpp (cpu): Renamed to...
 	(globalCpu): ...this, and initialise to nullptr.
 	(main): Update references to 'cpu' to 'globalCpu'.
